# innopoly-financial-literacy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/: lint-no-dev-bypass-leak.yml
api/: index.ts
docs/: app-editor-agent-editing-design.md  design-system-2026-07-15.md  pr1-description.md
docs/audit/: mobbin-references-2026-07-15.md
docs/brainstorms/: 2026-07-20-finfy-literacy-loop-premise-check.md
docs/plans/: 2026-07-15-001-frontend-replicate.md  2026-07-15-002-refactor-e2e-ux-motion-audit-plan.md  2026-07-16-001-market-gap-requirements.md  2026-07-17-001-brilliant-replicate.md  2026-07-17-002-platform-improvements.md  2026-07-17-003-frontend-spec.md  2026-07-18-001-ai-copilot.md  2026-07-18-002-seamless-brilliant-copilot-agent-prompt.md  2026-07-22-001-brilliant-lab-lesson.md  2026-07-22-001-ground-truth-brief.md  2026-07-22-002-one-basket-diversification-draft.md  2026-07-22-003-beat-the-market-dca.md  2026-07-22-004-fable5-master-implementation-plan.md  2026-07-23-002-ts-agent-infra-implementation-plan.md  2026-07-23-003-sensemake-clicky-adk-triage.md  CURRENT_STATE.md  finfy-literacy-architecture-plan.md  finfy-literacy-phase-0-planning.md  finfy-literacy.md  (+2 more)
guidelines/: Guidelines.md
scripts/: ablate.ts  dev.mjs
tutor-service/: DEPRECATED.md  Dockerfile  README.md  pyproject.toml
tutor-service/app/: agent.py  catalog.py  contracts.py  main.py  policy.py  tools.py
tutor-service/tests/: test_agent.py  test_contracts.py
(+198 files in other folders)
